--- a/projects/newsletter/index.css
+++ b/projects/newsletter/index.css
@@ -119,3 +119,7 @@ button {
 button:hover {
   background-image: linear-gradient(to right, #FF5476, #FF6840);
 }
+
+button:focus {
+  border: 2px solid #18c6fb
+}
