--- a/projects/multistep-form/css/addons-page.css
+++ b/projects/multistep-form/css/addons-page.css
@@ -34,6 +34,7 @@
 
 #content-addons input[type="checkbox"]:checked {
   border-color: transparent;
+  background-color: var(--clr-background-checkbox);
 }
 
 #content-addons input[type="checkbox"]:checked::after {
